--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="/css/style.css" />
     <title>Homepage</title>
   </head>
   <body>
@@ -16,8 +17,10 @@
       kipfel in Austria or Germany today and you'll likely be handed a
       crescent-shaped cookie.
     </p>
-    <a href="index.html">Homepage</a>
-
-    <a href="contact.html">Contact</a>
+    <footer>
+      <a href="/">Homepage</a>
+      <a href="/photo.html">Photo</a>
+      <a href="/contact.html">Contact</a>
+    </footer>
   </body>
 </html>
