--- a/photo.html
+++ b/photo.html
@@ -4,18 +4,16 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="/css/style.css" />
     <title>Photo</title>
   </head>
   <body>
     <h1>🥐Picture of a croissant</h1>
-    <img
-      src="https://static01.nyt.com/images/2021/04/07/dining/06croissantsrex1/merlin_184841898_ccc8fb62-ee41-44e8-9ddf-b95b198b88db-articleLarge.jpg"
-      alt=""
-      width="150px"
-    />
-    <a href="index.html">Homepage</a>
-    <a href="contact.html">Contact</a>
-    <a href="photo.html"></a>
+    <img src="/images/photo.jpg" alt="" class="croissant" />
+    <footer>
+      <a href="/">Homepage</a>
+      <a href="/contact.html">Contact</a>
+      <a href="/photo.html">Photo</a>
+    </footer>
   </body>
 </html>
