--- a/photo.html
+++ b/photo.html
@@ -3,13 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="delicious croissant" content="Croissant picture" />
     <link rel="stylesheet" href="/css/style.css" />
-    <title>Photo</title>
+    <title>Picture of a perfect croissant</title>
   </head>
   <body>
     <h1>🥐Picture of a croissant</h1>
-    <img src="/images/photo.jpg" alt="" class="croissant" />
+    <img src="/images/photo.jpg" alt="Croissant matsiro" class="croissant" />
     <footer>
       <a href="/">Homepage</a>
       <a href="/contact.html">Contact</a>
